# cmarkfmt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs
tests/: lib.rs
tests/suite/: blockquote.rs  general.rs  link.rs  list.rs  mod.rs  table.rs
